@@ -1,0 +1,3 @@
+module.exports = function getWindowOf(element) {
+  return (element.ownerDocument || element).defaultView
+}
